L<Bric::Biz::Asset::Business|Bric::Biz::Asset::Business> now only returns
relateds for an alias that are in the same site as the alias, or that are
aliases in the same site of the original relateds. This means that the
automatic publishing of related documents should now properly republish only
relateds in the same site as the alias document being published, rather than
the relateds of the document it aliases (Bug #1296). [David]

=item *

In the New Story form, the "Slug" field is no longer required if the
C<ALLOW_SLUGLESS_NONFIXED> F<bricolage.conf> directive is disabled and the
C<AUTOGENERATE_SLUG> directive is enabled. It is still required in the normal
story edit form, of course. Suggested by Phillip Smith (Bug # 1306). [David]

=back

=head2 Bug Fixes

=over

=item *

Patch for codeselect. [Greg Heo]

=item *

Eliminated the display of the login screen in the side nav when C<NO_TOOLBAR>
is set to false and a session expires. Reported by Matt Rolf (Bug #921).
[David]

=item *

Worked around a bug in SOAP::Lite that only appears when used in conjunction with
LWP 5.810 and later. [David]

=item *

Fixed issue in F<db_grant.pl>, which was trying to grant permissions to a row
count. [Paul Orrock]

=item *

Fixed a bug when publishing or previewing a story with related media where an
error could occur when a media document was published to more than one output
channel with different URIs. Reported by Matt Wlazlo. [David]

=item *

Fixed an issue when a user with publish permission selects "Check in and
Publish" for a newly created document. Reported by Chris Heiland and Matt Rolf
(RT #1261). [David]

=item *

When creating a new media document from a related media element, if the user
clicks "Save" or "Save and Stay" instead of "Create", it will properly create
the related media document. [David]

=item *

When creating creating a new media document by uploading a file in a related
media element, clicking "Save", "Cancel", or "Check in" on the media profile